# sqlalchemy-unchained

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
alembic_templates/generic/: env.py
docs/: .buildinfo  api.html  api.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  readme.html  search.html  searchindex.js  table-of-contents.html
docs-src/: Makefile  api.rst  conf.py  index.rst  table-of-contents.rst
docs-src/_static/: theme_customizations.css
docs/_modules/: index.html  sqlalchemy_unchained.html
docs/_modules/sqlalchemy/orm/: query.html
docs/_modules/sqlalchemy_unchained/: base_model.html  base_model_metaclass.html  base_query.html  foreign_key.html  model_manager.html  model_meta_options.html  model_registry.html  session_manager.html  validation.html
docs/_static/: documentation_options.js  theme_customizations.css
sqlalchemy_unchained/: __init__.py  base_model.py  base_model_metaclass.py  base_query.py  cli.py  foreign_key.py  model_manager.py  model_meta_options.py  model_registry.py  session_manager.py  utils.py  validation.py
sqlalchemy_unchained/alembic_templates/generic/: alembic.ini.mako  env.py
sqlalchemy_unchained/meta/: __init__.py  base_model_metaclass.py  model_meta_options.py  model_meta_options_factory.py  model_registry.py
tests/: conftest.py  test_convert_bases_to_mixins.py  test_foreign_key.py  test_model_manager.py  test_model_meta_options.py  test_session_manager.py  test_stock_sqla_models.py
