[tool.poetry]
name = "sqlalchemy-unchained"
version = "0.13.0"
license = "MIT"
description = "Improved declarative SQLAlchemy models"
authors = ["Brian Cappello"]
readme = "README.md"
repository = "https://github.com/briancappello/sqlalchemy-unchained"
packages = [{include = "sqlalchemy_unchained"}]
include = [{path = "sqlalchemy_unchained/alembic_templates"}]

[tool.poetry.scripts]
alembic = "sqlalchemy_unchained.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
sqlalchemy = ">=1.3,<2"
py-meta-utils = "^0.7.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"
black = "^24.1.1"

[tool.poetry.group.docs.dependencies]
m2rr = "^0.2.3"
sphinx-material = "^0.0.35"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
